--- a/site/style.css
+++ b/site/style.css
@@ -1,35 +1,24 @@
-figure {
-	margin: 0;
-	padding: 0;
+body {
+  background-color: #eee;
+  color: #1a1a1a;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 11px;
+  line-height: 16px;
 }
-.box-space {
-	padding: 10px;
+a:link,
+a:visited {
+  color: #00aad4;
 }
-
-/* headers */
+a:hover {
+  color: #f00;
+  text-decoration: none;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-size: inherit;
-	line-height: inherit;
-	margin: 0;
-}
-
-/* unit box */
-.unit {
-	background-color: white;
-}
-.unit-tit {
-	margin: 5px 5px 0 5px;
-}
-.unit-text {
-	margin: 0 5px;
-}
-.unit-footer {
-	margin-top: 5px;
-	padding: 5px;
-	border-top: 1px solid #eee;
+  font-size: 11px;
+  line-height: lineHeight;
 }
