--- a/style.less
+++ b/style.less
@@ -1,16 +1,18 @@
-/* EDITABLE SIMPLITT STYLE VARS */
+///////////////////////////////
+// EDITABLE SIMPLITT STYLE VARS
 
 @bodyBackground: #eee;
 @textColor: #1a1a1a;
 @fontFamily: Helvetica,Arial,sans-serif;
-@fontSize: 11px;
-@lineHeight: 16px;
+@fontSize: 12px;
+@lineHeight: 18px;
 
 @linkColor: #00aad4;
 @linkColorHover: #f00;
 
-@siteWidth: 1200px;
-@siteColumns: 4;
+$siteColumns1200: 4; // numbers of columns for a 1200px screen
+@siteColumns960: 4; // numbers of columns for a 960px screen
+@siteColumns768: 3; // numbers of columns for a 768px screen
 @columnMargin: @lineHeight / 2;
 
 @sidebarColumns: 1;
@@ -20,102 +22,123 @@
 @mosaicBoxBackground: #fff;
 @mosaicBoxFontColor: @textColor;
 
-/* end EDITABLE SIMPLITT STYLE VARS */
+// end EDITABLE SIMPLITT STYLE VARS
+///////////////////////////////////
 
 
-@columnWidth: @siteWidth / @siteColumns - @columnMargin * 2;
-@sidebarWidth: ( @columnWidth + @columnMargin * 2 ) * @sidebarColumns;
-@contentWidth: @siteWidth - @sidebarWidth;
+///////////////////////////////////
+// BUILD CSS FOR EACH @MEDIA QUERY
 
-figure { margin: 0; }
-body {
-	background-color: @bodyBackground;
-	color: @textColor;
-	font-family: @fontFamily;
-	font-size: @fontSize;
-	line-height: @lineHeight;
-	width: @siteWidth;
-	margin: @lineHeight auto;
-}
-a:link,
-a:visited {
-	color: @linkColor;
-}
-a:hover {
-	color: @linkColorHover;
-	text-decoration: none;
-}
-h1,h2,h3,h4,h5,h6 {
-	font-size: @fontSize;
-	line-height: @lineHeight;
-	margin: 0;
-	padding: 0;
-}
+.buildCSS (@minWidth;@maxWidth;@siteWidth;@siteColumns) {
 
+	@columnWidth: @siteWidth / @siteColumns - @columnMargin * 2;
+	@sidebarWidth: ( @columnWidth + @columnMargin * 2 ) * @sidebarColumns;
+	@contentWidth: @siteWidth - @sidebarWidth;
 
-.box {
-	float: left;
-	width: @columnWidth;
-	margin: @columnMargin;
+	@media (min-width: @minWidth) and (max-width: @maxWidth) {
 
-	.box-text {
-		padding: @columnMargin / 2 @columnMargin;
-	}
-	.box-footer {
-		margin: 0;
-		padding: @columnMargin / 2 @columnMargin @columnMargin / 2 0;
-		border-top: 1px solid @bodyBackground;
-
-		li {
-			list-style: none;
-			display: inline-block;
-			margin-left: @columnMargin;
+		figure { margin: 0; }
+		body {
+			background-color: @bodyBackground;
+			color: @textColor;
+			font-family: @fontFamily;
+			font-size: @fontSize;
+			line-height: @lineHeight;
+			width: @siteWidth;
+			margin: @lineHeight auto;
 		}
-	}
-}
-	
-#pre {
-	width: @sidebarWidth;
-	float: left;
-
-	.box {
-		background-color: @sidebarBoxBackground;
-		color: @sidebarBoxFontColor;
-
-		img {
-			width: @columnWidth - @columnMargin * 2;
-			padding: @columnMargin;
+		a:link,
+		a:visited {
+			color: @linkColor;
 		}
-	}
-}
-#content {
-	width: @contentWidth;
-	float: left;
-
-	.section {
-		float: left;
-		width: @contentWidth;
-		clear: right;
-		margin-bottom: @lineHeight / 2;
-		padding-bottom: @lineHeight;
-
-		.section-tit {
-			width: 0;
-			height: 0;
-			/*width: @columnWidth;
-			margin: @columnMargin;*/
-			h2 { text-indent: -9999px; }
+		a:hover {
+			color: @linkColorHover;
+			text-decoration: none;
 		}
+		h1,h2,h3,h4,h5,h6 {
+			font-size: @fontSize;
+			line-height: @lineHeight;
+			margin: 0;
+			padding: 0;
+		}
+		
+		
 		.box {
-			background-color: @mosaicBoxBackground;
-			color: @mosaicBoxFontColor;
-
-			img {
-				width: @columnWidth;
+			float: left;
+			width: @columnWidth;
+			margin: @columnMargin;
+		
+			.box-text {
+				padding: @columnMargin / 2 @columnMargin;
+			}
+			.box-footer {
+				margin: 0;
+				padding: @columnMargin / 2 @columnMargin @columnMargin / 2 0;
+				border-top: 1px solid @bodyBackground;
+		
+				li {
+					list-style: none;
+					display: inline-block;
+					margin-left: @columnMargin;
+				}
 			}
 		}
-	}
+			
+		#pre {
+			width: @sidebarWidth;
+			float: left;
+		
+			.box {
+				background-color: @sidebarBoxBackground;
+				color: @sidebarBoxFontColor;
+		
+				img {
+					width: @columnWidth - @columnMargin * 2;
+					padding: @columnMargin;
+				}
+			}
+		}
+		#content {
+			width: @contentWidth;
+			float: left;
+		
+			.section {
+				float: left;
+				width: @contentWidth;
+				clear: right;
+				margin-bottom: @lineHeight / 2;
+				padding-bottom: @lineHeight;
+		
+				.section-tit {
+					width: 0;
+					height: 0;
+					/*width: @columnWidth;
+					margin: @columnMargin;*/
+					h2 { text-indent: -9999px; }
+				}
+				.box {
+					background-color: @mosaicBoxBackground;
+					color: @mosaicBoxFontColor;
+		
+					img {
+						width: @columnWidth;
+					}
+				}
+			}
+		}
+
+	} /* end @media */
+
 }
 
-/* header */
+// BUILD CSS FOR EACH @MEDIA QUERY
+///////////////////////////////////
 
+
+///////////////////////////////////
+// CALL buildCSS() FOR EACH @MEDIA
+
+.buildCSS(1200px,9999px,1200px,$siteColumns1200);
+.buildCSS(960px,1199px,960px,$siteColumns960);
+.buildCSS(768px,959px,768px,$siteColumns768);
+.buildCSS(1px,767px,480px,2);
