blocks js added

--- a/style.less
+++ b/style.less
@@ -22,6 +22,8 @@
 @mosaicBoxBackground: #fff;
 @mosaicBoxFontColor: @textColor;
 
+@featuredBackground: yellow;
+
 // end EDITABLE SIMPLITT STYLE VARS
 ///////////////////////////////////
 
@@ -123,6 +125,9 @@
 					img {
 						width: @columnWidth;
 					}
+				}
+				.featured {
+					background-color: @featuredBackground;
 				}
 			}
 
