menutotop js added

--- a/style.less
+++ b/style.less
@@ -99,6 +99,11 @@
 					padding: @columnMargin;
 				}
 			}
+			.menutotop {
+				position: fixed;
+				top: 10px;
+				z-index: 10;
+			}
 		}
 		#content {
 			width: @contentWidth;
