--- a/style.less
+++ b/style.less
@@ -84,6 +84,9 @@
 					list-style: none;
 					margin-left: @columnMargin;
 				}
+				a {
+					text-decoration: none;
+				}
 			}
 		}
 			
@@ -159,7 +162,7 @@
 					font-weight: normal;
 				}
 				.article-meta {
-					margin: 0;
+					margin: @lineHeight 0 0 0;
 					padding: 0;
 		
 					li {
